fixed alignment issue

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -2,13 +2,12 @@
   position: relative;
 }
 
-.overlay-bg h1,
-h2,
-h3,
-h4,
-nav {
+.overlay-bg h1 {
   z-index: 5 !important;
+  top: 20%;
+  left: 5%;
 }
+
 .overlay-bg::after {
   height: 100%;
   width: 100%;
@@ -19,10 +18,6 @@ nav {
   background: rgba(0, 0, 0, 0.35);
 }
 
-.z-10 {
-  z-index: 5 !important;
-}
-
 .centred {
   position: relative;
   top: 40%;
@@ -30,6 +25,17 @@ nav {
   -moz-transform: translateX(-50%) translateY(-50%);
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
+}
+
+@media (min-width: 768px) {
+  .centered {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    -moz-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+  }
 }
 
 .container {
